force-app/main/default/objects/Chat_Event__e/Chat_Event__e.object-meta.xml
<CustomObject>
    <label>Chat Event</label>
    <pluralLabel>Chat Events</pluralLabel>
</CustomObject>