force-app/main/default/objects/Chat_Event__e/fields/ChatId__c.field-meta.xml
<CustomField>
    <fullName>ChatId__c</fullName>
    <label>ChatId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>