force-app/main/default/objects/Chat_Event__e/fields/To_Users__c.field-meta.xml
<CustomField>
    <fullName>To_Users__c</fullName>
    <label>To Users</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>